# Calculator

./: .gitignore  README.md  build.bat
calculator/: CMakeLists.txt  build.sh
calculator/include/: expression.hpp  logic.hpp  operator.hpp  pch.hpp  token.hpp  ui.hpp  utils.hpp  variable.hpp
calculator/src/: expression.cpp  logic.cpp  main.cpp  operator.cpp  token.cpp  utils.cpp  variable.cpp
vscode/: settings.json
